k8s/webflux-kuber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webflux-kuber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webflux-kuber
  template:
    metadata:
      labels:
        app: webflux-kuber
    spec:
      containers:
        - name: app
          image: prabhupsr/prrepo:webflux-gradle
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: webflux-kuber
spec:
  selector:
    app: webflux-kuber
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
